--- a/requirements.txt
+++ b/requirements.txt
@@ -19,13 +19,15 @@ yapf
 # API
 gcsfs
 google-cloud-storage
-mlflow
-s3fs
+# mlflow
+# s3fs
 streamlit
+fastapi
+uvicorn
 
 # utilities
 six>=1.14
 joblib
-memoized-property
-termcolor
+# memoized-property
+# termcolor
 python-dotenv
