--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,6 @@ notebooks/
 .python-version
 .vscode/
 notebooks/
+notebooks/projet stats foot.ipynb
 .vscode/settings.json
+wagon-bootcamp-332313-b7c39b02ab77.json
